Allowed for host, port, and help arguments when launching node-server-launch.js

--- a/Node server/Website Server/HTML/clientside.html
+++ b/Node server/Website Server/HTML/clientside.html
@@ -37,7 +37,7 @@
       <form class="col s12" onsubmit="generateInvoiceForNumbers()" >
         <div class="row">
           <div class="input-field col s6">
-              <input id="discount" type="number" min="0" class="validate" oninput="userInputTrigger()" step="0.01"></textarea>
+              <input id="discount" type="number" min="0" class="validate" oninput="userInputTrigger()"></textarea>
               <label for="discount">Textarea</label>
           </div>
           <div class="input-field col s6">
