--- a/Node server/Website Server/HTML/clientside.html
+++ b/Node server/Website Server/HTML/clientside.html
@@ -4,6 +4,7 @@
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0"/>
   <title>get gittins</title>
+  <script src="../js/qrcode.js"></script>
   <script src="../js/html-server-clientside.js"></script>
   <!-- CSS  -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -38,7 +39,7 @@
         <div class="row">
           <div class="input-field col s6">
               <input id="discount" type="number" min="0" class="validate" oninput="userInputTrigger()"></textarea>
-              <label for="discount">Textarea</label>
+              <label for="discount">Discount factor, interger in percent, e.g. 95</label>
           </div>
           <div class="input-field col s6">
             <input id="successes" type="number" min="0" class="validate" oninput="userInputTrigger()">
@@ -61,9 +62,18 @@
   <div class="card blue-grey darken-1" id="payment card">
     <div class="card-content white-text">
       <span class="card-title" id="payment card title">Invoice</span>
-      <p id="paymentText">Enter your query above, to recieve an invoice.</p>
+      <textarea id="paymentText"> 
+         Enter your query above, to recieve an invoice.
+      </textarea>
+<!--      Esbens kode
+<p id="paymentText">Enter your query above, to recieve an invoice.</p> -->
     </div>
   </div>
+</div>
+
+<div>
+  <button class="waves-effect waves-light btn enabled" onclick="displayQRCode();">QR-code</button>
+  <button class="waves-effect waves-light btn enabled" onclick="cpClipBoard();">Copy to clipboard</button>
 </div>
 
 <div class="card blue-grey lighten-1" id="result card" hidden="true">
@@ -76,6 +86,9 @@
       <a href="#">This is a link</a>
     </div>
   </div>
+
+<div id="qrcode" align="center" style=margin-top:15px;>
+</div>
 
   <div class="container">
     <div class="section">
@@ -127,10 +140,14 @@
       </div>
     </div>
   </footer>
-  <!--  Scripts-->
-  <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+
+<!--  Scripts-->
+<!--TODO put in ../js/html-server-clientside.js-->
+
+<!--  <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>-->  
   <script src="../js/materialize.js"></script>
   <script src="../js/init.js"></script>
+<!--  <script type="text/javascript" src="../js/jquery.min.js"></script> -->
 
-  </body>
+</body>
 </html>
