--- a/Node server/Website Server/HTML/clientside.html
+++ b/Node server/Website Server/HTML/clientside.html
@@ -144,7 +144,7 @@
 <!--  Scripts-->
 <!--TODO put in ../js/html-server-clientside.js-->
 
-<!--  <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>-->  
+  <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
   <script src="../js/materialize.js"></script>
   <script src="../js/init.js"></script>
 <!--  <script type="text/javascript" src="../js/jquery.min.js"></script> -->
