--- a/Node server/Website Server/HTML/clientside.html
+++ b/Node server/Website Server/HTML/clientside.html
@@ -11,15 +11,16 @@
   <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
   <script type="text/javascript" src="../js/jquery.min.js"></script>
   <script type="text/javascript" src="../js/materialize.js"></script>
-  <script type="text/javascript" src="../js/qrcode.js"></script>
-  <script type="text/javascript" src="../js/qrcode.min.js"></script>
+  <script type="text/javascript" src="../js/qr.js"></script>
   <script type="text/javascript" src="../js/html-server-clientside.js"></script>
   <script type="text/javascript" src="../js/init.js"></script>
 </head>
-<body>
+
+<body onload="clearFields()">
   
   <nav class="light-blue lighten-1" role="navigation">
     <div class="nav-wrapper container"><a id="logo-container" href="#" class="brand-logo">buy Gittins Index</a>
+<!--
       <ul class="right hide-on-med-and-down">
         <li><a href="#">Lookup invoice</a></li>
       </ul>
@@ -28,6 +29,7 @@
         <li><a href="#">Lookup invoice</a></li>
       </ul>
       <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+-->
     </div>
   </nav>
   <div class="section no-pad-bot" id="index-banner">
@@ -38,60 +40,62 @@
     </div>--> 
   </div>
 
-  <div class="container">
-    <div class="row">
-      <form class="col s12" onsubmit="generateInvoiceForNumbers()" >
+  <div class="container"> <!-- input division -->
+    <div class="col s12">
         <div class="row">
           <div class="input-field col s6">
-              <input id="discount" type="number" min="0" class="validate" oninput="userInputTrigger()"></textarea>
+              <input id="discount" type="number" min="0" max="99" class="validate" oninput="userInputTrigger()" onkeydown="userInputTrigger()"></textarea>
               <label for="discount">Discount factor, e.g. 95</label>
           </div>
           <div class="input-field col s6">
-            <input id="successes" type="number" min="0" class="validate" oninput="userInputTrigger()">
+            <input id="successes" type="number" min="0" class="validate" oninput="userInputTrigger()" onkeydown="userInputTrigger()">
             <label for="successes">Number of successes</label>
           </div>
         </div>
 
         <div class="row">
           <div class="input-field col s6">
-            <input id="failures" type="number" min="0" class="validate" oninput="userInputTrigger()">
+            <input id="failures" type="number" min="0" class="validate" oninput="userInputTrigger()" onkeydown="userInputTrigger()">
             <label for="failures">Number of failures</label>
           </div>
-          <a class="waves-effect waves-light btn disabled" id="orderButton" onclick="buttonPressed()">Order result</a>
+          <button class="waves-effect waves-light btn" id="btn_buy" onclick="buyPressed()">Order</button>
+          <button class="waves-effect waves-light btn" id="btn_reset" onclick="resetPressed()">Reset</button>
         </div>
-
-      </form>
     </div>
-  </div>
-  
+  </div> <!-- end of input division -->
+ 
+<div id="payment division">
+
   <div class="card blue-grey darken-1" id="payment card">
     <div class="card-content white-text">
       <div class=".input-field">
         <span class="card-title" id="payment card title">Invoice</span>
-        <input placeholder="Enter your query above, to generate an invoice, or insert you existing invoice here." id="paymentText" type="text" onkeyup="onInvoiceChange()" onpaste="onInvoiceChange()" onchange="onInvoiceChange()">
+        <textarea id="paymentText" rows = "3"></textarea>
         <label for="paymentText">Your invoice</label>
       </div>
     </div>
   </div>
-</div>
 
-<div>
-  <button class="waves-effect waves-light btn enabled" onclick="displayQRCode();">QR-code</button>
-  <button class="waves-effect waves-light btn enabled" onclick="cpClipBoard()">Copy to clipboard</button>
-  <button class="waves-effect waves-light btn enabled" onclick="clearFields()">Reset</button>
-</div>
 
-<div id="qrcode" align="center" style=margin-top:15px;>
-</div>
+  <div>
+    <button class="waves-effect waves-light btn" onclick="QRCodePressed()">QR-code</button>
+    <button class="waves-effect waves-light btn" onclick="cpPressed()">Copy to clipboard</button>
+  </div>
+
+  <div id="qr-division" style=margin-top:15px;>
+	<img>
+  </div>
+
+</div> <!-- end of payment division -->
 
 <div class="card blue-grey lighten-1" id="result card">
     <div class="card-content white-text">
       <span class="card-title">Result</span>
       <p class="flow-text" id="result">Enter your query above, to recieve an invoice.</p>
     </div>
-  </div>
+</div> <!-- end og result card -->
 
-  <div class="container">
+<div class="container">
     <div class="section">
 
       <!--   Icon Section   -->
@@ -102,7 +106,8 @@
             <h5 class="center">Pay using test bitcoin</h5>
 
             <p class="light">They are free!</p>
-            <p class="light">How to get them is explained on <a href="DanishLightning.dk:80">Danish Lightning</a>.</p>
+            <p class="light">Pay with your lightning enabled wallet.</p>
+            <p class="light">How to get tBTC is explained on <a href="DanishLightning.dk:80">Danish Lightning</a>.</p>
           </div>
         </div>
 
@@ -116,34 +121,35 @@
               <a href="https://sites.google.com/site/allanlindjensen/home/gittins-index">
                   look here</a>, but do you really care, as long as you get to spend your tBTCs?
             </p>
+	    <p class="light">The index is the fair price for a service for you, given your knowledge of the service, your discount factor,
+		in units, where a failure has value nought, and a succes has value unity.
+	    </p>
           </div>
         </div>
         <div class="col s12 m4">
           <div class="icon-block">
-            <h2 class="center light-blue-text"><i class="material-icons">settings</i></h2>
-            <h5 class="center">Or, seriously</h5>
-            <p class="light">The index is the fair price for a trial in units where an average failure is worth nought, and an average succes is worth unity.</p>
+            <h2 class="center light-blue-text"><i class="material-icons">info</i></h2>
+            <h5 class="center">The discount factor</h5>
+            <p class="light">Getting a succes next time, the service is tried does have a value. Not the same as getting a succes this time, but
+		maybe 90% of it. Then you discount factor is 90%</p>
+            <p class="light">You may have found a good service, 2 successes against 1 failure. It may proove advantageous to try a new service, 
+		so that you eventually will finde a better one. How high your discount factor be, for this to be the case?</p>
           </div>
         </div>
       </div>
 
     </div>
     <br><br>
-  </div>
- 
-  <footer class="page-footer orange">
-    <div class="container">
-      <div class="row">
-        <div class="col l6 s12">
-          <h5 class="white-text">more info on the Gittins Indices</h5>
-          <p class="grey-text text-lighten-4">In the computation it is assumed that a service is being tried, the value of which is a random variable with an unknown 
-distribution in the interval [0,1]. Each time the service is tried, the value of the result is either above or below the 0.5. This gives new knowledge about the distribution
-of the output. If a player has a very long horizon, indicated by a discount factor close to 100 per cent, it may be worth trying a new service, expecting to find a better
-one in due time in stead of staying with a rather good one. This balance depending upon an infinite future is found by computation of the Gittins Index.</p>
-        </div>
-      </div>
-    </div>
-  </footer>
+</div>
+
+<h5 style="  background:#a0a0a0; color:aqua; padding: 2em; text-align:center;">
+     Powered by Danish Lightning
+</h5>
+
+<p style="font-style: italic; color: blue;">
+  web designer: Esben Lind Kramer
+</p>
 
 </body>
 </html>
+
