Små rettelser i html - filen.

--- a/Node server/Website Server/HTML/clientside.html
+++ b/Node server/Website Server/HTML/clientside.html
@@ -71,7 +71,7 @@
       <div class=".input-field">
         <span class="card-title" id="payment card title">Invoice</span>
         <textarea id="paymentText" rows = "3"></textarea>
-        <label for="paymentText">Your invoice</label>
+        <label for="paymentText">Pay with your lightning enabled wallet</label>
       </div>
     </div>
   </div>
@@ -104,10 +104,8 @@
           <div class="icon-block">
             <h2 class="center light-blue-text"><i class="material-icons">payment</i></h2>
             <h5 class="center">Pay using test bitcoin</h5>
-
             <p class="light">They are free!</p>
-            <p class="light">Pay with your lightning enabled wallet.</p>
-            <p class="light">How to get tBTC is explained on <a href="DanishLightning.dk:80">Danish Lightning</a>.</p>
+            <p class="light">How to get tBTC is explained on <a href="DanishLightning.dk">Danish Lightning</a>.</p>
           </div>
         </div>
 
@@ -147,7 +145,7 @@
 </h5>
 
 <p style="font-style: italic; color: blue;">
-  web designer: Esben Lind Kramer
+  web design: Esben Lind Kramer
 </p>
 
 </body>
